[project]
name = "b1k-solution"
version = "0.1.0"
description = "BEHAVIOR-1K solution based on OpenPI"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "openpi",
    "jax[cuda12]>=0.4.35",
    "jaxlib>=0.4.35",
    "flax>=0.10.2",
    "numpy>=1.26.4",
    "torch>=2.5.1",
    "tyro>=0.9.12",
    "pydantic>=2.10.3",
    "opencv-python>=4.10.0",
    "joblib>=1.4.2",
    "matplotlib>=3.10.0",
    "scipy>=1.14.1",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "numpydantic>=1.7.0",
    "einops>=0.8.0",
    "etils>=1.10.0",
    "websockets>=14.1",
    "orbax-checkpoint>=0.10.3",
    "tqdm-loggable>=0.2",
    "lerobot>=0.3.0",
    "wandb>=0.18.0",
    "gpustat>=1.1.1",
    "huggingface-hub[cli]>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pre-commit>=4.0.1",
]

[tool.uv.sources]
openpi = { path = "openpi", editable = true }

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["b1k*"]

[tool.setuptools.package-data]
b1k = ["py.typed"]

